<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InseriscidatiNodo"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNamespace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/namespace"
        android:inputType="number"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edtNodeID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nodeindex"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edtMaxAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/maxage"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Timestamp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rdgrouptimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Server" />

        <RadioButton
            android:id="@+id/rdSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Source" />

        <RadioButton
            android:id="@+id/rdBoth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/Both" />

        <RadioButton
            android:id="@+id/rdNeither"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Neither" />
    </RadioGroup>

    <Button
        android:id="@+id/btnOkRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        style="@style/Widget.AppCompat.Button.Colored"/>
</LinearLayout>