<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SessionActivity">

    <TextView
        android:id="@+id/txtInfoSessione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infosessione"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="TextView" />

        <TextView
            android:id="@+id/txtSessionEndpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="TextView" />

        <TextView
            android:id="@+id/txtSessionId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="TextView" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnWrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write" />

    <Button
        android:id="@+id/btnBrowse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnSubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnMonitoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitoraggio" />

</LinearLayout>