<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inserisciparamsotto"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namespace"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtMonitoredNamespace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/namespace"
                android:inputType="number"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nodeindex"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtMonitoredNodeID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nodeindex"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/samplinginterlval"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtSamplingInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/samplinginterlval"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/QueueSize"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtQueueSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/QueueSize"
                android:inputType="number"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/checkDiscardOldest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/DiscardOldest" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Filtrosullaletturadati"
                android:textAlignment="center" />

            <RadioGroup
                android:id="@+id/rdgroupDeadband"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rdAbsolute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/FiltroAssoluto"
                    android:textAlignment="viewStart" />

                <RadioButton
                    android:id="@+id/rdPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FiltroPercentuale" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Deadband"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtValDeadband"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Deadband"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipodiTimestamp"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinnerTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btnOkMonitoredItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>