<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InseriscidatiNodo"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNamespaceWrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/namespace"
        android:inputType="number"
        android:textAlignment="center"
        android:visibility="visible"
        tools:layout_editor_absoluteY="41dp" />

    <EditText
        android:id="@+id/edtNodeIDWrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nodeindex"
        android:inputType="text"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edtValueWrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Value"
        android:inputType="text"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="159dp" />

    <Spinner
        android:id="@+id/spinnertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnOkWrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="381dp" />

</LinearLayout>

